# BGPad

./: CMakeLists.txt  build.sh
qml/components/: BGLabel.qml  BGTile.qml
qml/shell/: BottomBar.qml  TopBar.qml
src/: Backend.cpp  Backend.h  DesktopFileParser.cpp  DesktopFileParser.h  main.cpp
src/controllers/: ApplicationController.cpp  ApplicationController.h  SystemController.cpp  SystemController.h
src/models/: ApplicationInfo.h  ApplicationModel.cpp  ApplicationModel.h
